--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.4"
 # command to install dependencies
 install: 
-  - pip install -e ".[test]"  --upgrade
+  - pip install -e ".[test]"  --upgrade -r requirements.txt
 # command to run tests
 script:
   - aloe tests/ --verbose
